--- a/prepros-6.config
+++ b/prepros-6.config
@@ -64,23 +64,6 @@
       ]
     },
     {
-      "path": "assets/sass/layout/_mixin.sass",
-      "imports": [
-        "assets/sass/base/_colors.sass",
-        "assets/sass/base/_variables.sass"
-      ]
-    },
-    {
-      "path": "assets/sass/layout/_layout.sass",
-      "imports": [
-        "assets/sass/base/_colors.sass",
-        "assets/sass/base/_variables.sass",
-        "assets/sass/layout/_homepage.sass",
-        "assets/sass/layout/_extend.sass",
-        "assets/sass/layout/_mixin.sass"
-      ]
-    },
-    {
       "path": "assets/sass/layout/_homepage.sass",
       "imports": [
         "assets/sass/base/_colors.sass",
@@ -96,10 +79,27 @@
         "assets/sass/base/_variables.sass",
         "assets/sass/layout/_mixin.sass"
       ]
+    },
+    {
+      "path": "assets/sass/layout/_layout.sass",
+      "imports": [
+        "assets/sass/base/_colors.sass",
+        "assets/sass/base/_variables.sass",
+        "assets/sass/layout/_homepage.sass",
+        "assets/sass/layout/_extend.sass",
+        "assets/sass/layout/_mixin.sass"
+      ]
+    },
+    {
+      "path": "assets/sass/layout/_mixin.sass",
+      "imports": [
+        "assets/sass/base/_colors.sass",
+        "assets/sass/base/_variables.sass"
+      ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
