--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "Portfolio-",
+  "name": "Portfolio-2",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [
@@ -9,27 +9,27 @@
     },
     {
       "path": "assets/sass/layout/_mixin.sass",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"assets/css/layout/_mixin.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     },
     {
       "path": "assets/sass/layout/_layout.sass",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"assets/css/layout/_layout.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     },
     {
       "path": "assets/sass/layout/_homepage.sass",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"assets/css/layout/_homepage.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     },
     {
       "path": "assets/sass/layout/_extend.sass",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"assets/css/layout/_extend.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     },
     {
       "path": "assets/sass/base/_variables.sass",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"assets/css/base/_variables.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     },
     {
       "path": "assets/sass/base/_colors.sass",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"assets/css/base/_colors.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     }
   ],
   "fileTree": {
@@ -53,47 +53,11 @@
   },
   "imports": [
     {
-      "path": "assets/sass/style.sass",
-      "imports": [
-        "assets/sass/base/_colors.sass",
-        "assets/sass/base/_variables.sass",
-        "assets/sass/layout/_layout.sass",
-        "assets/sass/layout/_homepage.sass",
-        "assets/sass/layout/_extend.sass",
-        "assets/sass/layout/_mixin.sass"
-      ]
-    },
-    {
-      "path": "assets/sass/layout/_mixin.sass",
-      "imports": [
-        "assets/sass/base/_colors.sass",
-        "assets/sass/base/_variables.sass"
-      ]
-    },
-    {
-      "path": "assets/sass/layout/_layout.sass",
-      "imports": [
-        "assets/sass/base/_colors.sass",
-        "assets/sass/base/_variables.sass",
-        "assets/sass/layout/_homepage.sass",
-        "assets/sass/layout/_extend.sass",
-        "assets/sass/layout/_mixin.sass"
-      ]
-    },
-    {
       "path": "assets/sass/layout/_homepage.sass",
       "imports": [
         "assets/sass/base/_colors.sass",
         "assets/sass/base/_variables.sass",
         "assets/sass/layout/_extend.sass",
-        "assets/sass/layout/_mixin.sass"
-      ]
-    },
-    {
-      "path": "assets/sass/layout/_extend.sass",
-      "imports": [
-        "assets/sass/base/_colors.sass",
-        "assets/sass/base/_variables.sass",
         "assets/sass/layout/_mixin.sass"
       ]
     }
