--- a/prepros-6.config
+++ b/prepros-6.config
@@ -60,6 +60,42 @@
         "assets/sass/layout/_extend.sass",
         "assets/sass/layout/_mixin.sass"
       ]
+    },
+    {
+      "path": "assets/sass/style.sass",
+      "imports": [
+        "assets/sass/base/_colors.sass",
+        "assets/sass/base/_variables.sass",
+        "assets/sass/layout/_layout.sass",
+        "assets/sass/layout/_homepage.sass",
+        "assets/sass/layout/_extend.sass",
+        "assets/sass/layout/_mixin.sass"
+      ]
+    },
+    {
+      "path": "assets/sass/layout/_mixin.sass",
+      "imports": [
+        "assets/sass/base/_colors.sass",
+        "assets/sass/base/_variables.sass"
+      ]
+    },
+    {
+      "path": "assets/sass/layout/_layout.sass",
+      "imports": [
+        "assets/sass/base/_colors.sass",
+        "assets/sass/base/_variables.sass",
+        "assets/sass/layout/_homepage.sass",
+        "assets/sass/layout/_extend.sass",
+        "assets/sass/layout/_mixin.sass"
+      ]
+    },
+    {
+      "path": "assets/sass/layout/_extend.sass",
+      "imports": [
+        "assets/sass/base/_colors.sass",
+        "assets/sass/base/_variables.sass",
+        "assets/sass/layout/_mixin.sass"
+      ]
     }
   ],
   "projectView": {
