--- a/prepros-6.config
+++ b/prepros-6.config
@@ -35,9 +35,9 @@
   "fileTree": {
     "expandedDirs": [
       "assets",
-      "assets/sass",
       "assets/sass/layout",
-      "assets/sass/base"
+      "assets/sass/base",
+      "assets/sass"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -53,30 +53,20 @@
   },
   "imports": [
     {
+      "path": "assets/sass/layout/_extend.sass",
+      "imports": [
+        "assets/sass/base/_colors.sass",
+        "assets/sass/base/_variables.sass",
+        "assets/sass/layout/_mixin.sass"
+      ]
+    },
+    {
       "path": "assets/sass/layout/_homepage.sass",
       "imports": [
         "assets/sass/base/_colors.sass",
         "assets/sass/base/_variables.sass",
         "assets/sass/layout/_extend.sass",
         "assets/sass/layout/_mixin.sass"
-      ]
-    },
-    {
-      "path": "assets/sass/style.sass",
-      "imports": [
-        "assets/sass/base/_colors.sass",
-        "assets/sass/base/_variables.sass",
-        "assets/sass/layout/_layout.sass",
-        "assets/sass/layout/_homepage.sass",
-        "assets/sass/layout/_extend.sass",
-        "assets/sass/layout/_mixin.sass"
-      ]
-    },
-    {
-      "path": "assets/sass/layout/_mixin.sass",
-      "imports": [
-        "assets/sass/base/_colors.sass",
-        "assets/sass/base/_variables.sass"
       ]
     },
     {
@@ -90,10 +80,20 @@
       ]
     },
     {
-      "path": "assets/sass/layout/_extend.sass",
+      "path": "assets/sass/layout/_mixin.sass",
+      "imports": [
+        "assets/sass/base/_colors.sass",
+        "assets/sass/base/_variables.sass"
+      ]
+    },
+    {
+      "path": "assets/sass/style.sass",
       "imports": [
         "assets/sass/base/_colors.sass",
         "assets/sass/base/_variables.sass",
+        "assets/sass/layout/_layout.sass",
+        "assets/sass/layout/_homepage.sass",
+        "assets/sass/layout/_extend.sass",
         "assets/sass/layout/_mixin.sass"
       ]
     }
